--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2021"
 [dependencies]
 bootloader = "0.9.22"
 x86_64 = "0.14.1"
+volatile = "0.2.6"
+spin = "0.9.2"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
